Remove event handler and instead use logic to control wall activation